2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-architecture.pl: Wrap long strings for die calls
	at less than 80 chars.

2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/Arch.pm (debarch_to_gnutriplet): New function.
	(gnutriplet_to_debarch): Likewise.
	* scripts/dpkg-architecture.pl: Use debarch_to_gnutriplet and
	gnutriplet_to_debarch instead of nested calls to
	debtriplet_to_gnutriplet and debarch_to_debtriplet,
	debtriplet_to_debarch and gnutriplet_to_debtriplet.

2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-architecture.pl: Move setting of host and build arch
	variables after argument processing. Call list_arches from argument
	processing loop. Move architecture listing to ...
	(list_arches): ... here. New function.

2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/Arch.pm (get_valid_arches): Return an array instead of
	printing the architectures.

2007-10-18  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Deps.pm: new module to handle dependencies, to
	evaluate them and check implications between them.
	* scripts/t/400_Dpkg_Deps.t: non-regression tests for Dpkg::Deps.
	* scripts/dpkg-checkbuilddeps.pl: adapted to use the new
	Dpkg::Deps module.
	* scripts/dpkg-source.pl: Likewise.
	* scripts/dpkg-scanpackages.pl: Likewise.
	* scripts/dpkg-gencontrol.pl: Likewise. Also gains new features
	such as automatic simplification of dependencies.
	* scripts/controllib.pl: remove unused parsedep(), showdep(),
	@pkg_dep_fields and @src_dep_fields.
	* man/dpkg-gencontrol.1: document the new behaviour with
	dependency fields.

2007-10-18  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/ErrorHandling.pm (report): New function.
	(warning, warnerror, failure, syserr, error, internerr, unknown)
	(usageerr): Use report instead of sprintf. Accept a format string
	with variable number of arguments. Fix all callers.
	(subprocerr): Use failure instead of die and sprintf. Accept a