@@ -1,5 +1,12 @@
 2007-11-04  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-architecture.pl: Move host and build arch detection
+	to ...
+	* scripts/Dpkg/Arch.pm (get_host_arch): ... here.
+	(get_build_arch, get_gcc_host_gnu_type): Likewise. New function.
+
+2007-11-04  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-architecture.pl: Wrap long strings for die calls
 	at less than 80 chars.
 
